--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,7 +18,7 @@ body {
 
 .header:after {
   content: '';
-  margin: 8px auto 0;
+  margin: 12px auto 0;
   display: block;
   width: 100%;
   height: 1px;
@@ -32,12 +32,13 @@ body {
   font-family: Georgia,"Nimbus Roman No9 L",serif;
   font-weight: 600;
   color: #151d27;
-  margin: 24px 0 0;
+  margin: 34px 0 0;
 }
 
 .header__title small {
   font-size: 14px;
   text-transform: uppercase;
+  margin-top: 6px;
   display: block;
 }
 
@@ -56,7 +57,7 @@ body {
   display: block;
 }
 
-.content {
+.entry, .footer {
   margin: 16px auto 0;
   padding: 5px;
   max-width: 542px;
@@ -65,4 +66,8 @@ body {
   border: 4px solid #ecf0f1;
   border-radius: 5px;
   box-sizing: border-box;
+}
+
+.footer iframe {
+  display: block;
 }
