--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,56 +9,69 @@ body {
 
 .header {
   text-align: center;
-  margin: 0 auto 16px;
+  margin: 0;
   width: 100%;
-  max-width: 542px;
-  overflow: hidden;
   position: relative;
+  background: #fff;
+  border-bottom: 1px solid #1abc9c;
+  box-shadow: 0 1px 0 0 #fff;
+  box-sizing: border-box;
 }
 
-.header:after {
-  content: '';
-  margin: 12px auto 0;
-  display: block;
+.header__align {
+  margin: 0 auto;
+  padding: 0 20px;
   width: 100%;
-  height: 1px;
-  max-width: 348px;
-  background: #1abc9c;
+  max-width: 960px;
+  height: 50px;
+  overflow: hidden;
+  box-sizing: border-box;
 }
 
-.header__title {
+.header__logo {
+  margin-top: 12px;
+  float: left;
+  width: 122px;
+  overflow: hidden;
+}
+
+.header__logo img {
+  display: block;
+  max-width: 100%;
+}
+
+.header__github {
+  text-indent: -9999px;
+  margin-top: 13px;
+  float: right;
+  width: 24px;
+  height: 24px;
+  overflow: hidden;
+  background: url(../img/mark-github.svg) no-repeat;
+  -webkit-background-size: 100% auto;
+  background-size: 100% auto;
+}
+
+.title {
   font-size: 24px;
   line-height: 22px;
   font-family: Georgia,"Nimbus Roman No9 L",serif;
   font-weight: 600;
   color: #151d27;
+  text-align: center;
   margin: 34px 0 0;
 }
 
-.header__title small {
+.title small {
   font-size: 14px;
+  font-weight: 400;
   text-transform: uppercase;
-  margin-top: 6px;
-  display: block;
-}
-
-.header__logo {
-  padding: 12px 0 7px;
-  width: 81px;
-  position: absolute;
-  top: -5px; right: 0;
-  background: #dfe3e4;
-  border-radius: 5px;
-}
-
-.header__logo img {
-  margin: 0 auto;
-  width: 71px;
+  margin-top: 10px;
   display: block;
 }
 
 .entry, .footer {
-  margin: 16px auto 0;
+  margin: 24px auto 0;
   padding: 5px;
   max-width: 542px;
   overflow: hidden;
